--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,11 +19,13 @@
     --ifm-hero-subtitle-color: #606770;
     --ifm-hero-button-background-color: rgb(9 211 172) 30%;
     --ifm-hero-button-color: #21222c;
-    --ifm-col-background-color: #f0f1f5;
+    --ifm-col-background-color: #f6f6f7;
     --ifm-footer-theme-background-color: #ffffff;
     --ifm-footer-theme-color: #4b4b52;
     --ifm-hero-tag-title-color: #4b4b52;
+    --ifm-feature-icon-bg: #e3e3e5;
     --ifm-footer-theme-border-color: #60677037;
+    --ifm-tool-img-filter: 0.5;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -46,6 +48,8 @@
     --ifm-footer-theme-border-color: hsla(0, 0%, 100%, 0.1);
     --ifm-footer-theme-color: #dfdfd6;
     --ifm-hero-tag-title-color: #dfdfd6;
+    --ifm-feature-icon-bg: #21222c;
+    --ifm-tool-img-filter: 0;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
