--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -14,7 +14,7 @@
     --ifm-link-color: #fca311;
     --ifm-link-hover-color: #1c1e21;
     --ifm-hero-subtitle-color: #606770;
-    --ifm-hero-button-background-color: rgb(9 211 172) 30%;
+    --ifm-hero-button-background-color: rgba(9, 211, 172, 0.93) 30%;
     --ifm-hero-button-color: #21222c;
     --ifm-col-background-color: #f6f6f7;
     --ifm-footer-theme-background-color: #ffffff;
@@ -24,10 +24,11 @@
     --ifm-footer-theme-border-color: #60677037;
     --ifm-header-theme-border-color: #60677037;
     --ifm-tool-img-filter: 0.5;
-    --ifm-breadcrumb-item-background-active: rgb(9 211 172) 30%;
+    --ifm-breadcrumb-item-background-active: rgba(9, 211, 172, 0.93) 30%;
     --ifm-breadcrumb-color-active: #21222c;
     --ifm-menu-color-primary: rgba(9, 211, 172, 0.85);
     --ifm-menu-color-active: #21222c;
+    --ifm-blockquote-color: #d29922;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
