--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,6 +2,7 @@
 @import "/src/css/navbar.css";
 @import "/src/css/footer.css";
 @import "/src/css/hero.css";
+@import "/src/css/searchbar.css";
 @import "/src/css/markdown.css";
 
 .main-wrapper {
@@ -32,5 +33,11 @@
 @media screen and (max-width: 768px) {
     .row {
         gap: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .searchBox_node_modules-\@docusaurus-theme-classic-lib-theme-Navbar-Search-styles-module {
+        right: 4rem !important;
     }
 }
