fix(style): add media queries for width 1024 in header (#18)

--- a/src/components/HomepageHeader/HomepageHeader.module.css
+++ b/src/components/HomepageHeader/HomepageHeader.module.css
@@ -88,6 +88,21 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    .heroSection {
+        max-width: 50%;
+    }
+    .heroImg {
+        width: 400px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .heroSection {
+        max-width: unset;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .buttons {
         gap: 2rem;
