--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -28,6 +28,7 @@
     --ifm-breadcrumb-color-active: #21222c;
     --ifm-menu-color-primary: rgba(9, 211, 172, 0.85);
     --ifm-menu-color-active: #21222c;
+    --ifm-card-background-color: rgba(9, 211, 172, 0.85);
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
