--- a/src/components/CommandShowCase/CommandShowCase.module.css
+++ b/src/components/CommandShowCase/CommandShowCase.module.css
@@ -20,12 +20,12 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    padding: 4rem 7rem;
+    padding: 4rem 7rem 0rem 7rem;
     height: 100%;
 }
 
 .terminalHeader {
-    width: 65%;
+    width: 70%;
     font-size: 2.3rem;
     text-align: center;
     letter-spacing: -0.025em !important;
@@ -96,7 +96,7 @@
 
 @media screen and (max-width: 1024px) {
     .terminalContainer {
-        padding: 4rem 1rem;
+        padding: 4rem 1rem 0 1rem;
     }
 
     .terminal {
