--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,6 +2,10 @@
     align-items: center;
 }
 
+.navbar__logo {
+    height: 2.5rem;
+}
+
 .navbar__inner {
     padding: var(--ifm-navbar-padding);
 }
