--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -10,7 +10,11 @@
 }
 
 .breadcrumbs__link {
-    font-weight: 700;
+    font-weight: 500;
+}
+
+.breadcrumbs__link:any-link:hover {
+    color: var(--ifm-breadcrumb-color-active);
 }
 
 .card {
@@ -24,6 +28,10 @@
 
 .card:hover {
     outline: 2px solid #21af90;
+}
+
+.card:hover h2 {
+    color: var(--ifm-menu-color-primary);
 }
 
 .card > p {
@@ -46,6 +54,44 @@
 .table-of-contents__link--active code {
     color: rgb(9 211 172);
     font-weight: 700;
+}
+
+.grid-lines {
+    background-color: transparent;
+    background-image: linear-gradient(
+            0deg,
+            transparent 26%,
+            var(--ifm-grid-line-color) 10%,
+            var(--ifm-grid-line-color) 10%,
+            transparent 27%,
+            transparent 75%,
+            var(--ifm-grid-line-color) 50%,
+            var(--ifm-grid-line-color) 50%,
+            transparent 77%,
+            transparent
+        ),
+        linear-gradient(
+            90deg,
+            transparent 26%,
+            var(--ifm-grid-line-color) 10%,
+            var(--ifm-grid-line-color) 10%,
+            transparent 27%,
+            transparent 75%,
+            var(--ifm-grid-line-color) 50%,
+            var(--ifm-grid-line-color) 50%,
+            transparent 77%,
+            transparent
+        );
+    height: 100%;
+    background-size: 170px 170px;
+}
+
+.pagination-nav__link:hover {
+    border-color: var(--ifm-link-color);
+}
+
+a:hover {
+    color: var(--ifm-link-color);
 }
 
 @media screen and (max-width: 768px) {
