--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -11,9 +11,10 @@
     --ifm-navbar-height: 4.3rem;
     --ifm-navbar-padding: 2rem;
     --ifm-navbar-shadow: 0 1px 0 0 #60677037;
-    --ifm-link-color: #fca311;
+    --ifm-link-color: rgba(9, 211, 172);
     --ifm-link-hover-color: #1c1e21;
     --ifm-hero-subtitle-color: #606770;
+    --ifm-grid-line-color: rgb(96, 103, 112, 0.085);
     --ifm-hero-button-background-color: rgba(9, 211, 172, 0.85) 30%;
     --ifm-hero-button-color: #21222c;
     --ifm-col-background-color: #f6f6f7;
@@ -43,9 +44,10 @@
     --ifm-color-primary-lightest: #4fddbf;
     --ifm-navbar-background-color: #21222c;
     --ifm-navbar-shadow: 0 1px 0 0 hsla(0, 0%, 100%, 0.1);
-    --ifm-link-color: #e9c46a;
+    --ifm-link-color: rgba(9, 211, 172);
     --ifm-link-hover-color: #ffffff;
     --ifm-hero-subtitle-color: #a7a9b6;
+    --ifm-grid-line-color: rgb(167, 169, 182, 0.07);
     --ifm-hero-button-color: #ffffff;
     --ifm-col-background-color: rgb(43, 46, 58);
     --ifm-footer-theme-background-color: #21222c !important;
