--- a/src/components/HomepageHeader/HomepageHeader.module.css
+++ b/src/components/HomepageHeader/HomepageHeader.module.css
@@ -40,6 +40,24 @@
     gap: 0.5rem;
 }
 
+.heroButton:hover {
+    animation: pulse 1s ease-in-out;
+}
+
+@keyframes pulse {
+    from {
+        transform: scale3d(1, 1, 1);
+    }
+
+    50% {
+        transform: scale3d(1.05, 1.05, 1.05);
+    }
+
+    to {
+        transform: scale3d(1, 1, 1);
+    }
+}
+
 .heroImg {
     width: 500px;
 }
